# MLCopilot

./: pyproject.toml
src/mlcopilot/Notebooks/: DataLoader.ipynb
src/mlcopilot/OutputFiles/20240310214019/Logs/: Global_Logs.txt
src/mlcopilot/OutputFiles/20240310214949/Logs/: Global_Logs.txt
src/mlcopilot/PyFiles/: configs.py  data_loader_train.py  logger.py  project_gen.py
